# deepseek-python

./: README.md
.github/workflows/: azure-dev.yaml
env/: pyvenv.cfg
infra/: main.bicep
src/: pyproject.toml  requirements.txt
src/quartapp/: chat.py
src/quartapp/templates/: index.html
