[project]
name = "quartapp"
version = "1.0.0"
description = "Create a simple chat app using Quart and OpenAI"
dependencies = [
    "quart",
    "werkzeug",
    "gunicorn",
    "uvicorn",
    "uvloop>=0.16.0; sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')",
    "httptools",
    "watchfiles",
    "azure-ai-inference",
    "azure-identity",
    "aiohttp",
    "python-dotenv",
    "pyyaml"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"